# Jetpack-Joyride

./: CMakeLists.txt  README.md
lib/: shader.cpp  text2D.cpp
output/: CMakeCache.txt  Jetpack_Joyride  Makefile  cmake_install.cmake
src/: Image.cpp  Image.h  Object.frag  Object.vert  Rocket.frag  Rocket.vert  Wall.frag  Wall.vert  background.cpp  background.h  boomerang.cpp  boomerang.h  coin.cpp  coin.h  collision.cpp  collision.h  color.h  fire_brick.cpp  fire_brick.h  magnet.cpp  magnet.h  main.cpp  main.h  object.h  player.cpp  player.h  powerup.cpp  powerup.h  rocket.cpp  rocket.h  shapes.cpp  shapes.h  timer.cpp  wall.cpp  wall.h
